2024-02-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Fix typo in docstring.  (Bug#69294)

2024-02-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.
	(tramp-get-method-parameter, tramp-expand-args): New optional
	argument DEFAULT.

	* tramp-container.el (tramp-dockercp-method)
	(tramp-podmancp-method): New defconst.
	(tramp-methods) <dockercp, podmancp>: Add new methods.
	(tramp-container--completion-function): Adapt docstring.  Use it
	for "dockercp" and "podmancp" completion.

	* tramp-sh.el (tramp-methods) <nc>: Add `tramp-copy-file-name'.
	(tramp-default-copy-file-name): New defconst.
	(tramp-make-copy-file-name): Rename from
	`tramp-make-copy-program-file-name'.  Use method parameter
	`tramp-copy-file-name'.  (Bug#69085)
	(tramp-do-copy-or-rename-file-out-of-band): Adapt callees.

	* tramp.el (tramp-get-remote-tmpdir):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* tramp-sh.el (tramp-maybe-open-connection): Use a default
	value with `tramp-get-method-parameter'.

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-maybe-open-connection):
	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection):
	* tramp-sshfs.el (tramp-sshfs-handle-process-file)
	(tramp-sshfs-maybe-open-connection):
	* tramp-sudoedit.el (tramp-sudoedit-send-command): Adapt
	`tramp-expand-args' calls.

2024-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Adapt comments.

2024-02-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-register-archive-autoload-file-name-handler):
	Do not use read syntax #' for `tramp-archive-file-name-handler',
	it isn't autoloaded.

2024-02-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-security-key-pin-regexp): New defcustom.
	(tramp-action-otp-password, tramp-read-passwd): Trim password prompt.
	(tramp-action-show-and-confirm-message): Expand for PIN requests.
